stage3/kluctl-system/strip-klugui-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-klugui-prefix
spec:
  stripPrefix:
    prefixes:
      - /klugui
