stage3/kluctl-system/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: klugui
spec:
  routes:
    - kind: Rule
      match: Host(`kluctl.example.io`)
      services:
        - kind: Service
          name: kluctl-webui
          port: 8080
